--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,14 @@
 apply plugin: 'com.android.application'
 
+// 编译时间
+def buildTime = new Date().format("yyyy-MM-dd HH:mm", TimeZone.getTimeZone("GMT+8:00"))
+// 版本号，每次升级+1
+def versionCodeNum = 2
+// 版本名
+def versionMajor = 0
+def versionMinor = 0
+def versionPatch = 1
+
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
@@ -8,8 +17,10 @@ android {
         applicationId "com.example.xushao.gradledemo"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode versionCodeNum.toInteger()
+        versionName "${versionMajor}.${versionMinor}.${versionPatch}"
+        // 写入自定义数据到BuildConfig类
+        buildConfigField "String", "BUILD_TIME", "\"${buildTime}\""
     }
 
     buildTypes {
